--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ development:
   encoding: unicode
   database: ticketee_development
   pool: 5
-  username: ticketee
+  username: postgres
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -48,13 +48,6 @@ test:
   encoding: unicode
   database: ticketee_test
   pool: 5
-  username: ticketee
+  username: postgres
   password:
 
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: ticketee_production
-  pool: 5
-  username: ticketee
-  password:
